Fixed bugs on mobile.

--- a/styles/base.styl
+++ b/styles/base.styl
@@ -79,7 +79,7 @@ body, html
     .mobile-header
       position relative
       background $navy
-      flex 1 60%
+      flex 1 100%
       height 60px
       
       h4
@@ -89,7 +89,10 @@ body, html
         letter-spacing 2px
         text-indent 15px
         text-transform uppercase
-        color $orange
+
+        a
+          color $orange
+          text-decoration none
       
       @media $tablet
         display none
@@ -110,7 +113,7 @@ body, html
       .content-wrap
         position fixed
         min-width calc(100% + 180px)
-        height 100%
+        height calc(100% - 60px)
 
         @media $tablet
           min-width 100%
@@ -130,16 +133,19 @@ body, html
           scroll auto
           overflow-y scroll
           width calc(100% - 180px)
+          min-height auto
           height 100%
 
           @media $tablet
             width 100%
 
           .view
+            float left
             width 100%
             box-sizing border-box
-            padding 10px 15px 0 15px
+            padding 10px 15px 10px 15px
             @media $tablet
+              float none
               padding 10px 50px
             @media $laptop
               padding 10px 35px
