--- a/styles/pages.styl
+++ b/styles/pages.styl
@@ -24,7 +24,8 @@
   clear both
 
 .about
-  
+  margin-bottom 20px
+
   div
     width 100%
     
